Added register screen and fix cros and theming and localization

--- a/GabbracoonClient/GabbracoonClient.csproj
+++ b/GabbracoonClient/GabbracoonClient.csproj
@@ -1,13 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RequestModels\RequestModels.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Remove="Locales\de.json" />
+		<Content Remove="Locales\en-us.json" />
+		<Content Remove="Locales\en.json" />
+		<Content Remove="Locales\nl.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="Locales\de.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Locales\en-us.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Locales\en.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Locales\nl.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\RequestModels\RequestModels.csproj" />
+	</ItemGroup>
 
 </Project>
